--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "lukaszpietrzykowski16.github.io",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^3.0.6"
+    "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "gsap": "^3.10.4",
+    "three": "^0.141.0"
   }
 }
